[package]
name = "keepass-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
console = "0.15.0"
dialoguer = "0.9.0"
keepass = "0.4.9"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
